sprint-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sprint-ingress
  namespace: ttrpg-local
  # annotations:
  #   nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /ttrpg/sprint-management(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: ttrpg-local-ui-sprint-management
            port:
              number: 4204
